--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,8 +6,8 @@ name: Upload Python Package
 on:
   release:
     types: [created]
-  schedule:
-    - cron: '0 */6 * * *'
+  #schedule:
+   # - cron: '0 */6 * * *'
 
 
 jobs:
