--- a/.github/workflows/app-start.yml
+++ b/.github/workflows/app-start.yml
@@ -4,11 +4,9 @@
 name: Update World Country Rankings
 
 on:
-  #push:
-    #branches: [ master ]
-  schedule:
-    - cron: '0 */6 * * *'
-
+  push:
+    branches: [ master ]
+    
 jobs:
   build:
 
