--- a/.github/workflows/app-start.yml
+++ b/.github/workflows/app-start.yml
@@ -6,7 +6,9 @@ name: Update World Country Rankings
 on:
   push:
     branches: [ master ]
-    
+  schedule:
+    - cron: '0 */6 * * *'
+      
 jobs:
   build:
 
