--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        pip install flake8 selenium requests matplotlib
+        pip install flake8 selenium pandas countryinfo numpy requests matplotlib
         
     - name: Lint with flake8
       run: |
