--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -38,13 +38,13 @@ jobs:
         run: Rscript -e "devtools::install_github('Covid19R/covid19Italy')" -e "devtools::install_github('Covid19R/coronavirus')"
       - name: Render the site
         run: Rscript -e "rmarkdown::render_site()"
-      #- name: Push updates  
-      #  if: success()
-      #  run: |
-      #    if [[ "$(git status --porcelain)" != "" ]]; then
-      #        git config --global user.name 'RamiKrispin'
-      #        git config --global user.email 'ramkrisp@umich.edu'
-      #        git commit -am "Update italy province data"
-      #        git push
-      #    fi
+      - name: Push updates  
+        if: success()
+        run: |
+          if [[ "$(git status --porcelain)" != "" ]]; then
+              git config --global user.name 'web-sys1'
+              git config --global user.email 'web.system.management@gmail.com'
+              git commit -am "Update province data"
+              git push
+          fi
       
