--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Auto Update
 
 on:
-  schedule:
-    - cron:  '*/20 * * * *'
+  #schedule:
+    #- cron:  '*/20 * * * *'
+  push:
+    branches: [ master ]
 
 jobs:
   update:
