--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Update Sources
-        run: ./bin/update_sources.sh
+        run: ./bin/build_data.sh
   
       - name: Commit Sources Data
         run: |
