--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Reserve Right Update Sourcesb
-        run: ./bin/load.sh
+        run: load.sh
   
       - name: Commit Sources Data
         run: |
