--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Backtrace rights
         run: git update-index --chmod=+x './bin/update_sources.sh'
  
-      #- name: Reserve Right Update Sources
-        #run: ./bin/update-sources.sh
+      - name: Reserve Right Update Sources
+        run: ./bin/update-sources.sh # leave it skipped if is denied
   
       - name: Commit Sources Data
         run: |
