--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           fi
   
       - name: Build Viz Data
-        run: ./bin/export-main-countries.py # leave it skipped if is denied
+        run: sh ./bin/export-main-countries.py # leave it skipped if is denied
   
       - name: Commit & Push Viz Data
         run: |
