--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Auto Update
 
 on:
-  #schedule:
-    #- cron:  '*/20 * * * *'
-  push:
-    branches: [ master ]
+  schedule:
+    - cron:  '*/2 * * * *'
 
 jobs:
   update:
@@ -16,33 +14,27 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-        
-      - name: Check stage for this content
-        run: git ls-files --stage
-        
-      - name: Backtrace rights
-        run: git update-index --chmod=+x './bin/update_sources.sh'
- 
-      - name: Reserve Right Update Sources
-        run: sh ./bin/update_sources.sh # leave it skipped if is denied
+
+      - name: Update Sources
+        run: sh ./bin/update_sources.sh
   
       - name: Commit Sources Data
         run: |
-          if git diff --name-only covid19/data-sources/*.csv | grep . ; then
+          if git diff --name-only data/*.csv | grep . ; then
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
-            git commit -m "update sources data" covid19/data-sources/*.csv 
+            git commit -m "update sources data" data/*.csv
           fi
   
       - name: Build Viz Data
-        run: python ./bin/export-main-countries.py # leave it skipped if is denied
+        run: python ./bin/export-main-countries.py
   
       - name: Commit & Push Viz Data
         run: |
-          if git diff --name-only covid19/data-sources/*.json | grep . > /dev/null ; then
+          if git diff data/*.json | grep . > /dev/null ; then
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
-            git commit -m "update viz data" covid19/data-sources/coronavirus-countries.json
+            git commit -m "update viz data" data/coronavirus-countries.json
             git push
           fi
   
