--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
   
       - name: Commit Sources Data
         run: |
-          if git diff --name-only data/*.csv | grep . ; then
+          if git diff --name-only covid19/data-sources/*.csv | grep . ; then
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
-            git commit -m "update sources data" data/*.csv
+            git commit -m "update sources data" covid19/data-sources/*.csv
           fi
   
       - name: Build Viz Data
@@ -31,10 +31,10 @@ jobs:
   
       - name: Commit & Push Viz Data
         run: |
-          if git diff data/*.json | grep . > /dev/null ; then
+          if git diff covid19/data-sources/*.json | grep . > /dev/null ; then
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
-            git commit -m "update viz data" data/coronavirus-countries.json
+            git commit -m "update viz data" covid19/data-sources/coronavirus-countries.json
             git push
           fi
   
