--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Auto Update
 
 on:
-  schedule:
-    - cron:  '0 */6 * *  *'
+  #schedule:
+    #- cron:  '0 */6 * *  *'
+  push:
+    branches: [ master ]   
 
 jobs:
   update:
