--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Build and proceed
-        run: sh .bin/build_data.sh
+        run: sh ./bin/build_data.sh
         
       - name: Update Sources
         run: sh ./bin/update_sources.sh
