--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Build and proceed
-        run: sh ./bin/build_data.sh
+      #- name: Build and proceed
+        #run: bash ./bin/build_data.sh
         
       - name: Update Sources
         run: sh ./bin/update_sources.sh
