--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Auto Update Process
 
 on:
-    #push:
-    #branches: [ master ]  
+    push:
+     branches: [ master ]  
 
 jobs:
   update:
