--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
   schedule:
      - cron:  '0 * * * *'
 
@@ -29,6 +25,11 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit -m "Add latest dataset" -a
+         if git diff --exit-code --quiet; do
+          echo "No changes. Skip action."
+        else
+          git commit -m "Add latest dataset" -a
+        fi
     - name: Push changes
       uses: ad-m/github-push-action@v0.5.0
       with:
