--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,9 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git add countries.js countries.json populations.js populations.json
         git commit -m "Add latest dataset" -a
-         if git diff --exit-code --quiet; do
+         if git diff --exit-code --quiet; then
           echo "No changes. Skip action."
         else
           git commit -m "Add latest dataset" -a
