--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
 on:
-  push:	
-     branches: [ master ]
+  #push:	
+     #branches: [ master ]
   schedule:
      - cron:  '0 * * * *'
 
@@ -19,8 +19,8 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: python3 frontend/run_update.py
+    - name: Run hourly data updates
+      run: run-parts --verbose src
 
     - name: Commit files
       run: |
