--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,13 @@
+# This is a basic workflow to help you get started with Actions
+
+name: Update
+
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
 on:
-  push:	
-     branches: [ master ]
+  push:
+    branches:
+      - master
   schedule:
      - cron:  '0 * * * *'
 
@@ -18,6 +23,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    - name: Install dependencies
+      run: pip3 install requests
+
     # Runs a single command using the runners shell
     - name: Run hourly data updates
       run: run-parts --regex='.*\.py$' --verbose src/
@@ -26,8 +34,8 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git add data_collation
         git commit -m "Add latest dataset" -a || true
-
     - name: Push changes
       uses: ad-m/github-push-action@v0.5.0
       with:
