--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -35,7 +35,7 @@ jobs:
         git init
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add data_collation
+        git add data_collation/
         git commit -m "Add latest dataset" -a || true
     - name: Push changes
       uses: ad-m/github-push-action@v0.5.0
