--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,7 +25,10 @@ jobs:
 
     - name: Install dependencies
       run: pip3 install requests
-
+      
+    - name: Trigger source code
+      run: python src/80-create-events-data.py
+       
     # Runs a single command using the runners shell
     - name: Run hourly data updates
       run: run-parts --regex='.*\.py$' --verbose src/
@@ -35,7 +38,7 @@ jobs:
         git init
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add data_collation/
+        git add data_collation
         git commit -m "Add latest dataset" -a || true
     - name: Push changes
       uses: ad-m/github-push-action@v0.5.0
