--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Install dependencies
       run: pip3 install requests
       
-    - name: Trigger source code
-      run: python src/90-create-latest-totals-dataset.py
+    #- name: Trigger source code
+      #run: python src/90-create-latest-totals-dataset.py
        
     # Runs a single command using the runners shell
     - name: Run hourly data updates
