--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,8 +8,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-     - cron:  '0 * * * *'
+  #schedule:
+     #- cron:  '0 * * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -40,6 +40,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git add data_collation
         git commit -m "Add latest dataset" -a || true
+        git pull
     - name: Push changes
       uses: ad-m/github-push-action@v0.5.0
       with:
