--- a/.github/workflows/update-datasource.yml
+++ b/.github/workflows/update-datasource.yml
@@ -23,10 +23,10 @@ jobs:
   
       - name: Commit Sources Data
         run: |
-          if git diff --name-only covid19/data-sources/*.csv | grep . ; then
+          if git diff --name-only covid19/data_sources/*.csv | grep . ; then
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
-            git commit -m "update sources data" covid19/data-sources/*.csv
+            git commit -m "update sources data" covid19/data_sources/*.csv
           fi
   
       - name: Build Viz Data
@@ -34,10 +34,10 @@ jobs:
   
       - name: Commit & Push Viz Data
         run: |
-          if git diff covid19/data-sources/*.json | grep . > /dev/null ; then
+          if git diff covid19/data_sources/*.json | grep . > /dev/null ; then
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
-            git commit -m "update viz data" covid19/data-sources/coronavirus-countries.json
+            git commit -m "update viz data" covid19/data_sources/coronavirus-countries.json
             git push
           fi
   
