camouflage: verify if the code works at all.

--- a/.github/workflows/app-start.yml
+++ b/.github/workflows/app-start.yml
@@ -4,8 +4,8 @@
 name: Update World Country Rankings
 
 on:
-  #push:
-    #branches: [ master ]
+  push:
+    branches: [ master ]
   schedule:
     - cron: '0 */6 * * *'
       
@@ -43,7 +43,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit --allow-empty -m "Auto-update of the data packages" -a
-        git pull   
+        git pull
     - name: Push changes on built version
       uses: ad-m/github-push-action@master
       with:
