--- a/.github/workflows/app-start.yml
+++ b/.github/workflows/app-start.yml
@@ -4,10 +4,10 @@
 name: Update World Country Rankings
 
 on:
- push:
-    branches: [ master ]
+ #push:
+    #branches: [ master ]
  schedule:
-    - cron: '40 */6 * * *'
+    - cron: '** * *'
       
 jobs:
   build:
