--- a/.github/workflows/app-start.yml
+++ b/.github/workflows/app-start.yml
@@ -38,13 +38,15 @@ jobs:
       run: |
         python bin/world.py
         
-    - name: Commit files
+    - name: commit files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit --allow-empty -m "Auto-update of the data packages" -a
-        git pull
-    - name: Push changes on built version
+        git config pull.rebase false
+        #git fetch
+        git pull      
+    - name: Push changes
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
